--- a/app/src/main/res/layout/fragment_bed_wakeup_time.xml
+++ b/app/src/main/res/layout/fragment_bed_wakeup_time.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:timePickerMode="spinner"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:theme="@style/TimePickerTheme"
             android:layout_gravity="center" />
 
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:timePickerMode="spinner"
             android:theme="@style/TimePickerTheme"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:layout_gravity="center"/>
 
         <!-- Sleep Duration -->
@@ -84,7 +84,7 @@
             android:fontFamily="@font/dmsans_bold"
             android:text="@string/str_continue"
             android:textColor="@color/white"
-            android:textSize="@dimen/textsize_large"
+            android:textSize="@dimen/textsize_large18sp"
             android:layout_alignParentBottom="true" />
 
     </LinearLayout>
