--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -1907,7 +1907,8 @@
                                         android:id="@+id/imageEatRightCategory1"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".4"
+                                        android:layout_weight=".5"
+                                        android:scaleType="centerCrop"
                                         android:src="@drawable/foodandbody" />
 
                                     <TextView
@@ -1915,12 +1916,13 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
-                                        android:layout_weight=".6"
+                                        android:layout_weight=".5"
                                         android:fontFamily="@font/merriweather_bold"
                                         android:gravity="center"
                                         android:text="Food &amp; Body"
                                         android:textAlignment="center"
                                         android:textColor="#00553A"
+                                        android:layout_marginHorizontal="10dp"
                                         android:textSize="@dimen/textsize_large" />
                                 </LinearLayout>
 
@@ -1940,19 +1942,21 @@
                                         android:id="@+id/imageEatRightCategory2"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".4"
+                                        android:layout_weight=".5"
+                                        android:scaleType="centerCrop"
                                         android:src="@drawable/foodandmind" />
 
                                     <TextView
                                         android:id="@+id/tvEatRightCategory2"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".6"
+                                        android:layout_weight=".5"
                                         android:fontFamily="@font/merriweather_bold"
                                         android:gravity="center"
                                         android:text="Food &amp; Mind"
                                         android:textAlignment="center"
                                         android:textColor="#00553A"
+                                        android:layout_marginHorizontal="10dp"
                                         android:textSize="@dimen/textsize_large" />
 
                                 </LinearLayout>
@@ -1980,19 +1984,21 @@
                                         android:id="@+id/imageEatRightCategory3"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".4"
+                                        android:layout_weight=".5"
+                                        android:scaleType="centerCrop"
                                         android:src="@drawable/receipes" />
 
                                     <TextView
                                         android:id="@+id/tvEatRightCategory3"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".6"
+                                        android:layout_weight=".5"
                                         android:fontFamily="@font/merriweather_bold"
                                         android:gravity="center"
                                         android:text="Recipes &amp; \nCooking"
                                         android:textAlignment="center"
                                         android:textColor="#00553A"
+                                        android:layout_marginHorizontal="10dp"
                                         android:textSize="@dimen/textsize_large" />
 
                                 </LinearLayout>
@@ -2013,20 +2019,22 @@
                                         android:id="@+id/imageEatRightCategory4"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".4"
+                                        android:layout_weight=".5"
                                         android:contentDescription="dsha"
+                                        android:scaleType="centerCrop"
                                         android:src="@drawable/diets" />
 
                                     <TextView
                                         android:id="@+id/tvEatRightCategory4"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight=".6"
+                                        android:layout_weight=".5"
                                         android:fontFamily="@font/merriweather_bold"
                                         android:gravity="center"
                                         android:text="Diets"
                                         android:textAlignment="center"
                                         android:textColor="#00553A"
+                                        android:layout_marginHorizontal="10dp"
                                         android:textSize="@dimen/textsize_large" />
 
                                 </LinearLayout>
