--- a/app/src/main/res/layout/fragment_whats_in_your_mind.xml
+++ b/app/src/main/res/layout/fragment_whats_in_your_mind.xml
@@ -48,10 +48,10 @@
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/menuselected"
-            android:fontFamily="@font/dmsans_bold"
             android:text="@string/str_continue"
             android:textColor="@color/white"
-            android:textSize="@dimen/textsize_large"
+            android:fontFamily="@font/dmsans_bold"
+            android:textSize="@dimen/textsize_large18sp"
             android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
