--- a/app/src/main/res/layout/row_image_slidder.xml
+++ b/app/src/main/res/layout/row_image_slidder.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:text="Four Foundations, One Powerful App"
         android:textColor="@color/txt_color_header"
         android:textSize="@dimen/textsize_extralarge" />
