--- a/app/src/main/res/layout/dialog_welcome.xml
+++ b/app/src/main/res/layout/dialog_welcome.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="40dp"
         android:fontFamily="@font/dmsans_bold"
         android:gravity="center"
-        android:text="@string/happy_to_share"
+        android:text="Welcome aboard,"
         android:textColor="@color/txt_color_header"
         android:textSize="@dimen/textsize_large24sp" />
 
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:gravity="center"
         android:text="Shyam"
         android:textColor="@color/txt_color_header"
@@ -36,9 +36,10 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="20dp"
         android:fontFamily="@font/dmsans_regular"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textColor="@color/txt_color_header"
-        android:text="Join over 5000+ people who are\n living the RightLife."/>
+        android:text="@string/welcome_sub_text"/>
 
 </LinearLayout>
