--- a/app/src/main/res/layout/activity_breath_work_context_screen.xml
+++ b/app/src/main/res/layout/activity_breath_work_context_screen.xml
@@ -13,13 +13,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:padding="16dp"
         android:layout_alignParentTop="true">
 
         <ImageView
             android:id="@+id/icon_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_back" />
+            android:src="@drawable/ic_back_interestscreen" />
 
     </LinearLayout>
 
