--- a/app/src/main/res/layout/activity_data_control.xml
+++ b/app/src/main/res/layout/activity_data_control.xml
@@ -5,11 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fillViewport="true">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,7 +18,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/data_control" />
-
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:fadeScrollbars="false"
+                android:fillViewport="true">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,9 +53,10 @@
                     android:textColor="@color/txt_color_header"
                     android:textSize="@dimen/textsize_medium" />
             </RelativeLayout>
+            </ScrollView>
         </LinearLayout>
 
-    </ScrollView>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -88,6 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <com.google.android.material.checkbox.MaterialCheckBox
