--- a/app/src/main/res/layout/activity_export_health_data.xml
+++ b/app/src/main/res/layout/activity_export_health_data.xml
@@ -18,14 +18,14 @@
             android:id="@+id/ivBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_back"
+            android:src="@drawable/ic_back_interestscreen"
             android:layout_marginEnd="8dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Export All Health Data"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
             android:layout_marginStart="4dp" />
@@ -60,14 +60,14 @@
         <Button
             android:id="@+id/btnExport"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="52dp"
             android:text="Export"
             android:backgroundTint="@color/menuselected"
             android:textColor="@color/white"
             android:layout_gravity="center"
             android:layout_marginHorizontal="50dp"
-            android:fontFamily="@font/dmsans_regular"
-            android:textSize="18sp"
-            android:padding="10dp" />
+            android:fontFamily="@font/dmsans_bold"
+            android:textSize="@dimen/textsize_large20sp"
+            android:padding="1dp" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
