--- a/app/src/main/res/layout/activity_user_interest.xml
+++ b/app/src/main/res/layout/activity_user_interest.xml
@@ -4,19 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    android:padding="24dp">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_back" />
+        android:src="@drawable/ic_back_interestscreen" />
 
     <LinearLayout
         android:id="@+id/ll_interest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_card_16dp"
         android:layout_below="@+id/back_button">
 
         <TextView
@@ -34,15 +35,10 @@
             android:fontFamily="@font/dmsans_regular"
             android:text="Select at least 2 to continue"
             android:textColor="@color/workout_textcolor"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
     </LinearLayout>
 
-    <include
-        layout="@layout/loader_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/ll_interest"
-        android:layout_above="@id/ll_bottom" />
+
 
     <ScrollView
         android:id="@+id/scrollViewUserInterest"
@@ -52,6 +48,8 @@
         android:layout_above="@id/ll_bottom"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
+        android:scrollbarThumbVertical="@color/rightlife"
+        android:scrollbarTrackVertical="@color/darker_gray"
         android:fillViewport="true">
 
         <LinearLayout
@@ -71,15 +69,23 @@
         <Button
             android:id="@+id/btn_save_interest"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="60dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="36dp"
             android:backgroundTint="@color/rightlife"
+            android:enabled="false"
             android:fontFamily="@font/dmsans_bold"
             android:text="Save"
+            android:textSize="@dimen/textsize_large20sp"
             android:textColor="@color/white"
-            android:enabled="false"
-            android:textSize="@dimen/textsize_large" />
+             />
 
     </LinearLayout>
 
+    <include
+        layout="@layout/loader_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+         />
 </RelativeLayout>
