--- a/app/src/main/res/layout/activity_wellness_focus_list.xml
+++ b/app/src/main/res/layout/activity_wellness_focus_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/gray_light_bg"
     android:layout_height="match_parent">
 
     <include layout="@layout/loader_layout" />
@@ -67,6 +67,7 @@
         android:fontFamily="@font/dmsans_regular"
         android:text="Choose 2 to 4 goals you want to focus on, and we'll be with you every step of the way."
         android:textColor="@color/txt_color_header"
+        android:layout_marginTop="@dimen/margin_card_16dp"
         android:textSize="16sp" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -84,12 +85,12 @@
     <Button
         android:id="@+id/btn_continue"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="56dp"
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="16dp"
         android:text="Save"
-        android:textSize="@dimen/textsize_large18sp"
+        android:textSize="@dimen/textsize_large20sp"
         android:fontFamily="@font/dmsans_bold"
         android:backgroundTint="@color/rightlife"
         android:textColor="@color/white"
